--- a/index.html
+++ b/index.html
@@ -1,44 +1,62 @@
 <!DOCTYPE html>
 
 <html lang="br">
-    <head>
-        <title>Microsoft Azure</title>
-        <meta charset="UTF-8">
-        <style>
-            *{
-                margin: 0px;
-                padding: 0px;
-                box-sizing: border-box;
-            }
-            header{
-                width: 100%;
-                height: 70px;
-                background-color: #fafcfc;
-                padding-top: 10px;              
-                margin-bottom: 50px;            
-            }
-            #titulo{
-                color: #1b507c;
-                text-align: center;
-                font-size: 2.3em;
-                letter-spacing: 1.5px;
-            }
-            #imagem{
-                display: block;
-                margin-left: auto;
-                margin-right: auto;
-            }
-        </style>
-    </head>
+  <head>
+    <title>Microsoft Azure</title>
+    <meta charset="UTF-8">
+    <style>
+      * {
+        margin: 0px;
+        padding: 0px;
+        box-sizing: border-box;
+      }
 
-    <body>
-        <header>
-            <h1 id="titulo">
-               Aplicativo WEB - Odesnildo Nogueira
-            </h1>
-        </header>
-        <div>
-            <img id="imagem" src="appservice.png">
-        </div>
-    </body>
+      header {
+        width: 100%;
+        height: 70px;
+        background-color: #fafcfc;
+        padding-top: 10px;
+        margin-bottom: 50px;
+      }
+
+      #titulo {
+        color: #1b507c;
+        text-align: center;
+        font-size: 2.3em;
+        letter-spacing: 1.5px;
+      }
+
+      #imagem {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+      }
+
+      .social-icons {
+        text-align: center;
+        margin-top: 20px;
+      }
+
+      .social-icons a {
+        margin: 0 10px;
+        align-items: center;
+      }
+    </style>
+
+  </head>
+
+  <body>
+    <header>
+      <h1 id="titulo">Aplicativo WEB - Odesnildo Nogueira</h1>
+    </header>
+    <div>
+      <img id="imagem" src="appservice.png">
+    </div>
+    <div class="social-icons">
+      <a href="https://www.odesnildo.com.br" target="_blank"><img src="logo-odesnildo.png" width="45px" height="45px" alt="odesnildo.com.br"></a>
+      <a href="https://www.youtube.com/@odesnildo" target="_blank"><img src="youtube-icon.png" width="50px" height="50px" alt="Youtube"></a>
+      <a href="https://www.linkedin.com/in/odesnildo" target="_blank"><img src="linkedin-icon.png" width="50px" height="50px" alt="LinkedIn"></a>
+      <a href="https://github.com/odesnildonogueira" target="_blank"><img src="github-icon.png" width="50px" height="50px" alt="GitHub"></a>
+    </div>
+  </body>
 </html>
